--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -295,6 +295,7 @@ section.callouts{
 						display: inline-block;
 						padding:.36em .85em;
 						border-radius: 5px;
+						margin-bottom:0;
 
 						&:hover{
 							background-color: #408dd1;
@@ -557,6 +558,7 @@ section.callouts{
 						display: inline-block;
 						padding:.36em .85em;
 						border-radius: 5px;
+						margin-bottom:0;
 
 						&:hover{
 							background-color: #408dd1;
@@ -748,8 +750,8 @@ section.callouts{
 	//border:2px solid brown;
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
-
+	//justify-content: center;
+	justify-content: space-evenly;
 
 
 		// width:40%;
@@ -763,6 +765,7 @@ section.callouts{
 			height:300px;
 			margin-bottom:1em;
 			justify-content: center;
+			// justify-content: space-evenly;
 			align-items: center;
 			position: relative;
 			//border:4px solid purple;
@@ -806,13 +809,13 @@ section.callouts{
 		.meet-robbyn{
 			
 			background-image: url("../images/placeholder.jpg");
-			margin-right:1em;
+			//margin-right:1em;
 
 		}
 
 		.donate{
 			background-image: url("../images/placeholder2.jpg");
-			margin-left: 1em;
+			//margin-left: 1em;
 		}
 
 
